# prismatic

./: CLAUDE.md  pyproject.toml
.github/workflows/: claude-code-review.yml
scripts/: test-watcher.sh
src/prismatic/: __init__.py  trigger.py  watcher.py
src/prismatic/agents/: obsidian.py
